--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@tauri-apps/api": "^1.0.2",
     "classnames": "^2.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.5",
