--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "nice": "eslint --fix ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
@@ -24,9 +25,13 @@
     "@tauri-apps/cli": "^1.0.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "2.7.1",
     "sass": "^1.54.4",
-    "typescript": "^4.6.4",
+    "typescript": "^4.7.4",
     "vite": "^3.0.0",
     "vite-plugin-css-modules": "^0.0.1"
   }
