feat: Manifest handler

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ anyhow = "1.0.61"
 regex = "1.6.0"
 thiserror = "1.0.32"
 home = "0.5.3"
+tokio = "1.20.1"
 
 [features]
 # by default Tauri runs in production mode
