--- a/package.json
+++ b/package.json
@@ -11,28 +11,31 @@
     "nice": "eslint --fix ."
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-regular-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@tauri-apps/api": "^1.0.2",
-    "classnames": "^2.3.1",
+    "@tauri-apps/api": "^1.2.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.5",
     "zustand": "^4.0.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.0.5",
+    "@tauri-apps/cli": "^1.2.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.21",
     "prettier": "2.7.1",
     "sass": "^1.54.4",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.7.4",
     "vite": "^3.0.0",
     "vite-plugin-css-modules": "^0.0.1"
